--- a/index.html
+++ b/index.html
@@ -1,117 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JobSim Pro - Virtual Job Simulation Platform</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>JobSim Pro - Virtual Job Simulation Platform</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="dark-header">
-    <div class="container">
-      <h1 class="logo"><a href="#home">JobSim Pro</a></h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#simulations">Simulations</a></li>
-        </ul>
-        <button class="hamburger-menu" aria-label="Toggle navigation">&#9776;</button>
-      </nav>
-    </div>
-  </header>
+    <header class="dark-header">
+        <div class="container main-nav">
+            <h1 class="logo"><a href="#home">JobSim Pro</a></h1>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#simulations">Simulations</a></li>
+                </ul>
+                <button class="hamburger-menu" aria-label="Toggle navigation">&#9776;</button>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Hero Section -->
-  <section id="home" class="section hero">
-    <div class="container">
-      <h2>Bridge the Gap: Master Your Career</h2>
-      <p>Experience job-like simulations in a fun, immersive, and futuristic environment.</p>
-      <a href="#simulations" class="btn primary-btn">Explore Simulations</a>
-    </div>
-  </section>
+    <section id="home" class="section hero">
+        <div class="slideshow-container">
 
-  <!-- About Section -->
-  <section id="about" class="section">
-    <div class="container">
-      <h2>Our Story</h2>
-      <p>JobSim Pro was born out of real-world experience, providing hands-on simulations to bridge the gap between theory and practice.</p>
-    </div>
-  </section>
+            <div class="mySlides fade">
+                <div class="slide-content container">
+                    <h2>Bridge the Gap: Master Your Career</h2>
+                    <p>Experience job-like simulations in a fun, immersive, and futuristic environment.</p>
+                    <a href="#simulations" class="btn primary-btn">Explore Simulations</a>
+                </div>
+            </div>
 
-  <!-- Features Section -->
-  <section id="features" class="section">
-    <div class="container">
-      <h2>Key Features</h2>
-      <div class="features-grid">
-        <div class="feature">
-          <h3>Role-Based Practice</h3>
-          <p>Interactive simulations tailored to specific professions.</p>
-        </div>
-        <div class="feature">
-          <h3>Real Task Challenges</h3>
-          <p>Handle authentic responsibilities in a risk-free environment.</p>
-        </div>
-        <div class="feature">
-          <h3>Pre-Internship Prep</h3>
-          <p>Train for real work before your first day on the job.</p>
-        </div>
-        <div class="feature">
-          <h3>Multi-Industry Use</h3>
-          <p>Simulations available for finance, IT, HR, and more.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+            <div class="mySlides fade">
+                <div class="slide-content container">
+                    <h2>Virtual Reality, Real World Skills</h2>
+                    <p>Immerse yourself in true-to-life scenarios and gain practical expertise.</p>
+                    <a href="#features" class="btn primary-btn">Discover Features</a>
+                </div>
+            </div>
 
-  <!-- Simulations Section -->
-  <section id="simulations" class="section">
-    <div class="container">
-      <h2>Explore Simulations</h2>
-      <div class="simulations-grid">
-        <div class="simulation-card" data-id="underwriter">
-          <h3>Medical Underwriter</h3>
-          <p>Review risks and make decisions like a pro.</p>
-          <button class="btn secondary-btn" data-id="underwriter">Start</button>
-        </div>
-        <div class="simulation-card" data-id="analyst">
-          <h3>Financial Analyst</h3>
-          <p>Analyze, model, and recommend investments.</p>
-          <button class="btn secondary-btn" data-id="analyst">Start</button>
-        </div>
-        <div class="simulation-card" data-id="support">
-          <h3>IT Support</h3>
-          <p>Diagnose and solve technical issues.</p>
-          <button class="btn secondary-btn" data-id="support">Start</button>
-        </div>
-        <div class="simulation-card" data-id="hr">
-          <h3>HR Coordinator</h3>
-          <p>Handle employee records and internal tasks.</p>
-          <button class="btn secondary-btn" data-id="hr">Start</button>
-        </div>
-      </div>
-    </div>
-  </section>
+            <div class="mySlides fade">
+                <div class="slide-content container">
+                    <h2>Your Future Starts Now</h2>
+                    <p>Prepare for success across diverse industries with cutting-edge simulations.</p>
+                    <a href="#about" class="btn primary-btn">Learn Our Story</a>
+                </div>
+            </div>
 
-  <!-- Footer -->
-  <footer class="dark-footer">
-    <div class="container">
-      <p>&copy; 2025 JobSim Pro. All rights reserved.</p>
-    </div>
-  </footer>
+            <div style="text-align:center" class="slide-dots">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
 
-  <!-- Modal -->
-  <div id="simulation-modal" class="modal hidden">
-    <div class="modal-content">
-      <span class="close-button">&times;</span>
-      <h3 id="modal-title">Simulation Title</h3>
-      <p id="modal-description">Simulation description will appear here.</p>
-      <button class="btn primary-btn">Start Simulation</button>
-    </div>
-  </div>
+        </div>
+    </section>
 
-  <script src="script.js"></script>
+    <section id="about" class="section">
+        <div class="container">
+            <h2>Our Story</h2>
+            <p>JobSim Pro was born out of real-world experience, providing hands-on simulations to bridge the gap between theory and practice, empowering individuals to confidently step into their dream careers.</p>
+        </div>
+    </section>
+
+    <section id="features" class="section">
+        <div class="container">
+            <h2>Key Features</h2>
+            <div class="features-grid">
+                <div class="feature">
+                    <h3>Role-Based Practice</h3>
+                    <p>Interactive simulations tailored to specific professions, offering targeted skill development.</p>
+                </div>
+                <div class="feature">
+                    <h3>Real Task Challenges</h3>
+                    <p>Handle authentic responsibilities and scenarios in a risk-free, consequence-free environment.</p>
+                </div>
+                <div class="feature">
+                    <h3>Pre-Internship Prep</h3>
+                    <p>Train for real work and build confidence before your first day on the job or internship.</p>
+                </div>
+                <div class="feature">
+                    <h3>Multi-Industry Use</h3>
+                    <p>Simulations available for a wide range of industries including finance, IT, HR, healthcare, and more.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="simulations" class="section">
+        <div class="container">
+            <h2>Explore Simulations</h2>
+            <div class="simulations-grid">
+                <div class="simulation-card" data-id="underwriter">
+                    <h3>Medical Underwriter</h3>
+                    <p>Review risks and make critical decisions like a seasoned professional.</p>
+                    <button class="btn secondary-btn" data-id="underwriter">Start</button>
+                </div>
+                <div class="simulation-card" data-id="analyst">
+                    <h3>Financial Analyst</h3>
+                    <p>Analyze data, build models, and recommend smart investments.</p>
+                    <button class="btn secondary-btn" data-id="analyst">Start</button>
+                </div>
+                <div class="simulation-card" data-id="support">
+                    <h3>IT Support</h3>
+                    <p>Diagnose and solve technical issues with confidence and efficiency.</p>
+                    <button class="btn secondary-btn" data-id="support">Start</button>
+                </div>
+                <div class="simulation-card" data-id="hr">
+                    <h3>HR Coordinator</h3>
+                    <p>Handle employee records, manage internal communications, and assist with various HR tasks, preparing you for a role in human resources.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="dark-footer">
+        <div class="container">
+            <p>&copy; 2025 JobSim Pro. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <div id="simulation-modal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h3 id="modal-title">Simulation Title</h3>
+            <p id="modal-description">Simulation description will appear here.</p>
+            <button class="btn primary-btn">Start Simulation</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
